# rust_first_api

./: Cargo.toml  readme.md
src/: main.rs
src/controllers/: landing-controller.rs
src/models/: user_model.rs
src/routes/: landing.rs
